--- a/subscribeView/src/main/res/values/attrs.xml
+++ b/subscribeView/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- subscribeview 的自定义属性-->
     <declare-styleable name="subscribe">
-        <attr name="textContet" format="string" />
+        <attr name="text" format="string" />
         <attr name="textColor" format="color" />
         <attr name="spBackground" format="reference" />
         <attr name="textSize"  format="dimension"/>
